2004-03-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/init.c: Fix a problem on MinGW.

2004-03-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkcombo.c: Fix a bug(Sorry, I added some debug code...).

2004-03-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/bindings.rb: Modified.

2004-03-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktextbuffer.c: Gtk::TextBuffer#insert_with_tags, 
	#insert_pixbuf, #insert_child_anchor: Show warning when -d mode only. 
	* src/rbgtk.h: Synchronize version number to Ruby/GLib.
	* src/init.c: Code cleanup.
	* REAMDE, sample/misc/label.rb, sample/misc/toolbar.rb,
          sample/testgtk/notebook.rb, src/init.c, src/rbgdkdisplay.c,
          src/rbgdkdraw.c, src/rbgdkevent.c, src/rbgdkkeymap.c,
          src/rbgdkpixmap.c, src/rbgdkscreen.c, src/rbgdkselection.c,
          src/rbgdkwindow.c, src/rbgtk.h, src/rbgtkallocation.c,
          src/rbgtkcombo.c, src/rbgtkcontainer.c, src/rbgtkobject.c,
          src/rbgtksettings.c, src/rbgtkspinbutton.c, src/rbgdkgc.c,
          src/rbgtktextattributes.c, src/rbgtktextbuffer.c,
          src/rbgtktreeiter.c, src/rbgtktreepath.c, src/rbgtktreeview.c,
          src/rbgtktreeviewcolumn.c, src/rbgtkwidget.c: Update Copyright.
	
2004-03-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkcontainer.c: Fix a memleaks for Gtk::Container#child_properties. 
	* src/rbgdkevent.c: Removed Gdk::EventKey#string, #length.

2004-03-05  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgdkdraw.c, src/rbgdkgc.c, src/rbgdkpixmap.c, src/rbgdkwindow.c:
	Fix #elif conditions.

2004-03-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkselection.c, rbgtkwidget.c: Fix warnings for GTK+-2.0.x. 

2004-03-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/gtk-demo/stock_browser.rb, list_store.rb, tree_store.rb: 
	Some modified. 

2004-03-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreeviewcolumn.c: Fix a segfault of 
	Gtk::TreeViewColumn#set_cell_data_func. Reported by Joao Pedrosa.