@@ -1,3 +1,7 @@
+2004-03-14  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbgtkwindow.c: Add Gtk::Window#fullscreen, #unfullscreen. 
+
 2004-03-10  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/init.c: Fix a problem on MinGW.
